--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
     box-sizing: border-box;
 }
 .cal{
-    background-image: linear-gradient(rgba(225, 225, 225, 0.5), rgba(225, 225, 255, 0.5)), url(./images/images\ \(11\).jpeg \(11\).jpeg);
+    background-image: linear-gradient(rgba(225, 225, 225, 0.5), rgba(225, 225, 255, 0.5)), url(images\ \(11\).jpeg);
     size: 100%;
     height: 100vh;
     align-content: center;
 }
 #bg{
-    background-color: rgb(176, 190, 187);
+    background-color: rgb(171, 182, 179);
 }
